# aic

./: pixi.toml
aic_model/aic_model/: aic_model.py
ch_data_process/: README.md  __main__.py  action_rpy.py  frame_similarity.py  phase_merge.py  postprocess_scheme.py  rotations.py
ch_data_process/test/: conftest.py  test_action_rpy.py  test_frame_similarity.py  test_phase_merge.py  test_postprocess_scheme.py
ch_inference/: README.md  package.xml  pixi.toml  setup.cfg  setup.py
ch_inference/ch_inference/: commands.py  completion.py  rotations.py  runtime.py  schema.py
ch_inference/ch_inference/policies/: VLAPolicy.py
ch_inference/launch/: ch_inference.launch.py
ch_inference/test/: test_schema.py
ch_milestones/: README.md
ch_milestones/ch_milestones/config/: policy_config.py  randomization_config.py  task_config.py
ch_milestones/ch_milestones/environment/: randomization.py  reset_client.py  resetter.py
ch_milestones/ch_milestones/nodes/: data_producer.py  environment_resetter.py
ch_milestones/ch_milestones/policies/: OraclePolicy.py  cartesian_trajectory.py  ground_truth_guidance.py  oracle_completion.py  oracle_divergence.py  oracle_frames.py  oracle_motion.py  oracle_stage_base.py  oracle_stages.py  oracle_validation.py  stage_alignment.py  stage_coarse_align.py  (+2 more)
ch_milestones/launch/: ch_milestone_data_collection.launch.py
ch_milestones/test/: test_cartesian_trajectory.py  test_ground_truth_guidance.py  test_lerobot_format.py  test_oracle_divergence.py  test_policy_config.py  test_randomization_config.py  test_task_configuration.py
(+2 files in other folders)
